Adds more content, and redifines some things

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Openhub</h1>
-        <p>Openhub is a sclabale, distributed system that allows the large scale analysis of the quality of open-source repositories written in Python and hosted on GitHub.</p>
-        <p><a class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+        <p>Openhub is a scalable and extensible distributed system that indexes open-source GitHub repositories written in Python, and analyzes their quality based on different quality attributes in order to later provide a more effective search of repositories based on their quality.</p>
+        <p><a href="{{ url_for('docs') }}" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
       </div>
     </div>
 
@@ -15,12 +15,11 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+          <h2>The Problem</h2>
+          <p>Currently, the web hosts millions of freely accessible open source repositories. Finding the right repository amounts to searching repositories by name or description, and testing projects until a fit meets a desired set of quality attributes (e.g. performance, testability or usability). This is a time consuming task since there is no proper tool to search for repositories by how well they perform on a set of given quality attributes.</p>
         </div>
         <div class="col-lg-4">
-          <h2>Heading</h2>
+          <h2>Solution</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
         </div>
