--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
     <!--[if lt IE 7]>
       <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
+    <a href="https://github.com/gabrielfarah/OpenHub"><img style="position: fixed; top: 0; right: 0; border: 0; z-index: 1031;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -37,15 +38,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Openhub</a>
+          <a class="navbar-brand" href="{{ url_for('index') }}">Openhub</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <!-- <li class="active"><a href="#">Home</a></li> -->
-            <li><a {% if msr %}class="active" {% endif %}href="{{ url_for('msr') }}">MSR 2014</a></li>
-            <li><a {% if challenge %}class="active" {% endif %}href="{{ url_for('challenge') }}">MSR 2014 Challenge</a></li>
-            <li><a {% if about %}class="active" {% endif %}href="{{ url_for('about') }}">About</a></li>
-            <li><a {% if contact %}class="active" {% endif %}href="{{ url_for('contact') }}">Contact</a></li>
+            <li {% if docs %}class="active"{% endif %}><a href="{{ url_for('docs') }}">Docs</a></li>
+            <li {% if challenge %}class="active"{% endif %}><a href="{{ url_for('challenge') }}">MSR 2014 Challenge</a></li>
+            <li {% if about %}class="active"{% endif %}><a href="{{ url_for('about') }}">About</a></li>
+            <li {% if contact %}class="active"{% endif %}><a href="{{ url_for('contact') }}">Contact</a></li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
