Adds new content and download links to page

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,18 +15,19 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h2>The Problem</h2>
-          <p>Currently, the web hosts millions of freely accessible open source repositories. Finding the right repository amounts to searching repositories by name or description, and testing projects until a fit meets a desired set of quality attributes (e.g. performance, testability or usability). This is a time consuming task since there is no proper tool to search for repositories by how well they perform on a set of given quality attributes.</p>
+          <h2>Quality Analysis</h2>
+          <p>Currently, the web hosts millions of open source repositories. Finding the right repository amounts to searching repositories by name or description, but there is now way to search by quality attributes (e.g. performance, testability or usability). OpenHub aims to provide a searchable index of repositories and ther quality.</p>
+          <p><a class="btn btn-success" href="{{ url_for('docs') }}">More info &raquo;</a></p>
         </div>
         <div class="col-lg-4">
-          <h2>Solution</h2>
+          <h2>Repository Index</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+          <p><a class="btn btn-success" href="https://drive.google.com/file/d/0B5cF-sS0dlwJb3BVaHlJWE96UEU/edit?usp=sharing">Download the Data Set &raquo;</a></p>
         </div>
         <div class="col-lg-4">
-          <h2>Heading</h2>
+          <h2>Extensible Code</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+          <p><a class="btn btn-success" href="https://github.com/gabrielfarah/OpenHub/archive/master.zip">Download the code &raquo;</a></p>
         </div>
       </div>
     </div> <!-- /container -->
