Updates more content

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,31 +3,38 @@
 
 {% block content %}
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Openhub</h1>
-        <p>Openhub is a sclabale, distributed system that allows the large scale analysis of the quality of open-source repositories written in Python and hosted on GitHub.</p>
-        <p><a class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-      </div>
-    </div>
-
     <div class="container">
+      <div class="row" style="margin-top: 30px;">
+        <h1>Contact Information:</h1>
+      </div>
       <!-- Example row of columns -->
-      <div class="row">
+      <div class="row" style="text-align:center;">
         <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+          <h2>Gabriel Farah</h2>
+          <p>Universidad de Los Andes<br>
+            Cra 1E #19-40,<br>
+            Bogotá - Colombia<br>
+            +57 1 339-4949<br>
+          </p>
+          <p><a class="" href="mailto:g.farah38@uniandes.edu.co">g.farah38@uniandes.edu.co</a></p>
         </div>
         <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+          <h2>Juan Sebastian Tejada</h2>
+          <p>Universidad de Los Andes<br>
+            Cra 1E #19-40,<br>
+            Bogotá - Colombia<br>
+            +57 1 339-4949<br>
+          </p>
+          <p><a class="" href="mailto:js.tejada157@uniandes.edu.co">js.tejada157@uniandes.edu.co</a></p>
         </div>
         <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+          <h2>Dario Correal</h2>
+          <p>Universidad de Los Andes<br>
+            Cra 1E #19-40,<br>
+            Bogotá - Colombia<br>
+            +57 1 339-4949<br>
+          </p>
+          <p><a class="" href="mailto:dcorreal@uniandes.edu.co">dcorreal@uniandes.edu.co</a></p>
         </div>
       </div>
     </div> <!-- /container -->
