--- a/templates/index.html
+++ b/templates/index.html
@@ -21,13 +21,13 @@
         </div>
         <div class="col-lg-4">
           <h2>Repository Index</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p>1.7 million GitHub projects were crawled up to now and more than 140,000 Python repositories analyzed for a total of 9.8TB of data processed using the OpenHub architecture. The resulting 3GB dataset collected is available for download, and is constanty growing. </p>
           <p><a class="btn btn-success" href="https://drive.google.com/file/d/0B5cF-sS0dlwJb3BVaHlJWE96UEU/edit?usp=sharing">Download the Data Set &raquo;</a></p>
         </div>
         <div class="col-lg-4">
           <h2>Extensible Code</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-success" href="https://github.com/gabrielfarah/OpenHub/archive/master.zip">Download the code &raquo;</a></p>
+          <p>OpenHub was built with extensibility in mind to allow develepers to write and integrate new quality analyzers for different quality attributes beyond the ones initially covered and for other languages beyond Python. We encourage people to fork the GitHub repository and submit pull requests, and new analyzers will be integrated into the architecture.</p>
+          <p><a class="btn btn-success" href="https://github.com/gabrielfarah/OpenHub">Download the code &raquo;</a></p>
         </div>
       </div>
     </div> <!-- /container -->
