--- a/templates/base.html
+++ b/templates/base.html
@@ -44,8 +44,8 @@
           <ul class="nav navbar-nav">
             <!-- <li class="active"><a href="#">Home</a></li> -->
             <li {% if docs %}class="active"{% endif %}><a href="{{ url_for('docs') }}">Docs</a></li>
-            <li {% if challenge %}class="active"{% endif %}><a href="{{ url_for('challenge') }}">MSR 2014 Challenge</a></li>
-            <li {% if about %}class="active"{% endif %}><a href="{{ url_for('about') }}">About</a></li>
+            <!-- <li {% if challenge %}class="active"{% endif %}><a href="{{ url_for('challenge') }}">MSR 2014 Challenge</a></li>
+            <li {% if about %}class="active"{% endif %}><a href="{{ url_for('about') }}">About</a></li> -->
             <li {% if contact %}class="active"{% endif %}><a href="{{ url_for('contact') }}">Contact</a></li>
           </ul>
         </div><!--/.navbar-collapse -->
