Adds more content and images

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <!-- <li class="active"><a href="#">Home</a></li> -->
-            <li {% if docs %}class="active"{% endif %}><a href="{{ url_for('docs') }}">Docs</a></li>
+            <li {% if docs %}class="active"{% endif %}><a href="{{ url_for('docs') }}">Architecture</a></li>
             <!-- <li {% if challenge %}class="active"{% endif %}><a href="{{ url_for('challenge') }}">MSR 2014 Challenge</a></li>
             <li {% if about %}class="active"{% endif %}><a href="{{ url_for('about') }}">About</a></li> -->
             <li {% if contact %}class="active"{% endif %}><a href="{{ url_for('contact') }}">Contact</a></li>
