--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="col-lg-4">
           <h2>Repository Index</h2>
-          <p>1.7 million GitHub projects were crawled up to now and more than 140,000 Python repositories analyzed for a total of 9.8TB of data processed using the OpenHub architecture. The resulting 3GB dataset collected is available for download, and is constanty growing. </p>
+          <p>1.7 million GitHub projects were crawled up to now, and more than 140,000 Python repositories analyzed for a total of 9.8TB of data processed using the OpenHub architecture. The resulting 3GB dataset collected is available for download, and is constanty growing. </p>
           <p><a class="btn btn-success" href="https://drive.google.com/file/d/0B5cF-sS0dlwJb3BVaHlJWE96UEU/edit?usp=sharing">Download the Data Set &raquo;</a></p>
         </div>
         <div class="col-lg-4">
