--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,10 +3,12 @@
 
 {% block content %}
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="container">
-      <div class="row" style="margin-top: 30px;">
-        <h1>Contact Information:</h1>
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Contact Information</h1>
       </div>
+    </div>
+    <div class="container">
       <!-- Example row of columns -->
       <div class="row" style="text-align:center;">
         <div class="col-lg-4">
