--- a/templates/docs.html
+++ b/templates/docs.html
@@ -1,33 +1,68 @@
 {% extends "base.html" %}
-{% block title %} - MSR{% endblock %}
+{% block title %} - Architecture{% endblock %}
 
 {% block content %}
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Openhub</h1>
-        <p>Openhub is a sclabale, distributed system that allows the large scale analysis of the quality of open-source repositories written in Python and hosted on GitHub.</p>
-        <p><a class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+        <h1>Openhub Architecture</h1>
       </div>
     </div>
 
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+        <div class="col-lg-12">
+          <h2>General Architecture</h2>
+          <p style="text-align: center;"><img src="static/img/openhub_main.png"></p>
         </div>
-        <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+        <div class="col-lg-12">
+          <h2>Worker and Analyzers Architecture</h2>
+          <p style="text-align: center;"><img src="static/img/openhub_components.png"></p>
         </div>
-        <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+        <div class="col-lg-12">
+          <h2>Data Storage</h2>
+          <code>{
+"_id": "GitHub ID",<br>
+"analyzed_at": "if analized",<br>
+"state": "current repo state",<br>
+"name": "name",<br>
+"full_name": "<username>/<repo_name>",<br>
+"description": "description",<br>
+"fork": "is fork?",<br>
+"created_at": "created_at",<br>
+"updated_at": "updated_at",<br>
+"homepage": "homepage",<br>
+"size": "size",<br>
+"language": "language",<br>
+"has_issues": "has_issues",<br>
+"has_downloads": "has_downloads",<br>
+"has_wiki": "has_wiki",<br>
+"forks": "forks",<br>
+"open_issues": "open_issues",<br>
+"watchers": "watchers",<br>
+"url": "complete info url",<br>
+"git_url": "git clone url",<br>
+"issues_url": "issues_url",<br>
+"collaborators_url": "collaborators_url",<br>
+"languages_url": "languages_url",<br>
+"archive_url": "zip or tar download url",<br>
+"comments_url": "comments_url",<br>
+"contributors_url": "contributors_url",<br>
+"html_url": "github web url",<br>
+"subscribers_url": "subscribers_url",<br>
+"stargazers_url": "stargazers_url",<br>
+"owner": {<br>
+"html_url": "github web url",<br>
+"type": "user type",<br>
+"repos_url": "repos url"<br>
+},<br>
+“usability”: [<generated metric>:<value>],<br>
+“reusability”: [<generated metric>:<value>],<br>
+“testability”: [<generated metric>:<value>],<br>
+“security”: [<generated metric>:<value>],<br>
+}
+</code>
         </div>
       </div>
     </div> <!-- /container -->
